# CMRenderer

./: .gitignore  .gitmodules  CMCommon.vcxproj  CMCommon.vcxproj.filters  CMDep_DearImGui.vcxproj  CMDep_DearImGui.vcxproj.filters  CMDep_yaml-cpp.vcxproj  CMDep_yaml-cpp.vcxproj.filters  CMEngine.sln  CMEngine.vcxproj  CMEngine.vcxproj.filters  CMRenderer.sln  CMakeLists.txt  CMakeSettings.json  README.md  RenderDoc.cap  premake5.lua
CMCommon/: CMCommon.vcxproj  CMCommon.vcxproj.filters  CMakeLists.txt
CMCommon/include/: CMC_BinaryStream.hpp  CMC_ECS.hpp  CMC_ECSEntity.hpp  CMC_ECSTypeID.hpp  CMC_ErasedArena.hpp  CMC_Logger.hpp  CMC_Macros.hpp  CMC_MetaArena.hpp  CMC_Parser.hpp  CMC_Paths.hpp  CMC_Shapes.hpp  CMC_SparseSet.hpp  CMC_TypeID.hpp  CMC_Types.hpp  CMC_Utility.hpp  CMC_WindowsDefines.hpp  CMC_WindowsUtility.hpp
CMCommon/src/: CMC_BinaryStream.cpp  CMC_ECS.cpp  CMC_ECSEntity.cpp  CMC_ErasedArena.cpp  CMC_MetaArena.cpp  CMC_Parser.cpp  CMC_Shapes.cpp  CMC_Types.cpp  CMC_WindowsUtility.cpp
CMEngine/: CMEngine.vcxproj  CMEngine.vcxproj.filters  CMakeLists.txt  imgui.ini
CMEngine/CMPlatform_Core/: CMakeLists.txt
CMEngine/CMPlatform_WinImpl/: CMakeLists.txt
CMEngine/include/: CME_Asset.hpp  CME_AssetHandle.hpp  CME_AssetManager.hpp  CME_Component.hpp  CME_Engine.hpp  CME_Entity.hpp  CME_MeshData.hpp  CME_MeshSerializer.hpp  CME_PCH.hpp  CME_Paths.hpp  CME_Scene.hpp  CME_SceneManager.hpp  Engine.hpp
CMEngine/include/Common/: BinaryStream.hpp  ErasedArena.hpp  Macros.hpp  MetaArena.hpp  SparseSet.hpp  Types.hpp  Utility.hpp
CMEngine/include/Core/: AssetManager.hpp  CME_Asset.hpp  CME_AssetHandle.hpp  CME_AssetManager.hpp  CME_Camera.hpp  CME_Component.hpp  CME_EditorLayer.hpp  CME_Engine.hpp  CME_Layer.hpp  CME_LayerStack.hpp  CME_MeshData.hpp  CME_MeshSerializer.hpp  CME_PCH.hpp  CME_Paths.hpp  CME_Scene.hpp  CME_SceneManager.hpp  CME_TypeHint.hpp  CME_WindowSettings.hpp  Component.hpp  ECSEntity.hpp  EditorLayer.hpp  Layer.hpp  Paths.hpp  Scene.hpp  SceneManager.hpp  TypeHint.hpp
CMEngine/include/DirectX/: CME_DXCamera.hpp  CME_DXComponents.hpp  CME_DXContext.hpp  CME_DXRenderer.hpp  CME_DXResources.hpp  CME_DXShaderData.hpp  CME_DXShaderLibrary.hpp  CME_DXShaderSet.hpp  CME_DXUtility.hpp
CMEngine/include/Win/: Win_Utility.hpp  Win_Window.hpp
CMEngine/include/Windows/: CME_WNKeyboard.hpp  CME_WNUtility.hpp  CME_WNWindow.hpp
CMEngine/resources/shaders/: CMCircle_VS.hlsl  CMQuadDepth_PS.hlsl  CMQuadOutlined_VS.hlsl  Circle_PS.hlsl  Circle_VS.hlsl  QuadOutlined_VS.hlsl
CMEngine/src/: CME_Asset.cpp  CME_AssetHandle.cpp  CME_AssetManager.cpp  CME_Component.cpp  CME_Engine.cpp  CME_Main.cpp  CME_MeshSerializer.cpp  CME_PCH.cpp  CME_Scene.cpp  CME_SceneManager.cpp  Component.cpp  Component.hpp  Engine.cpp  Engine_Export.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Macros.hpp  Main.cpp  Math.hpp  PCH.hpp  PCH_Main.hpp  Platform.hpp  PlatformUtil.hpp  Types.cpp  Types.hpp
CMEngine/src/Asset/: AssetID.hpp  AssetManager.cpp  AssetManager.hpp
CMEngine/src/Common/: BinaryStream.cpp  ErasedArena.cpp  FileWatcher.cpp  FileWatcher.hpp  Logger.hpp  Macros.hpp  MetaArena.cpp  Parser.cpp  Parser.hpp  TypeID.hpp  Types.cpp  Types.hpp  Utility.hpp
CMEngine/src/Core/: Asset.cpp  Asset.hpp  AssetHandle.cpp  AssetHandle.hpp  AssetManager.cpp  CME_Asset.cpp  CME_AssetHandle.cpp  CME_AssetManager.cpp  CME_Camera.cpp  CME_Component.cpp  CME_EditorLayer.cpp  CME_Engine.cpp  CME_Layer.cpp  CME_LayerStack.cpp  CME_Main.cpp  CME_MeshSerializer.cpp  CME_PCH.cpp  CME_Scene.cpp  CME_SceneManager.cpp  Camera.hpp  Component.cpp  ECS.cpp  ECS.hpp  ECSEntity.cpp  EditorLayer.cpp  Layer.cpp  LayerStack.cpp  LayerStack.hpp  MeshData.hpp  MeshSerializer.cpp  MeshSerializer.hpp  PCH.cpp  PCH.hpp  Scene.cpp  SceneManager.cpp
CMEngine/src/DirectX/: CME_DXCamera.cpp  CME_DXComponents.cpp  CME_DXContext.cpp  CME_DXRenderer.cpp  CME_DXResources.cpp  CME_DXShaderData.cpp  CME_DXShaderLibrary.cpp  CME_DXShaderSet.cpp
CMEngine/src/ECS/: Entity.cpp  SparseSet.hpp  TypeID.cpp  TypeID.hpp
CMEngine/src/Scene/: Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
CMEngine/src/Win/: Win_Defines.hpp  Win_Keyboard.cpp  Win_Keyboard.hpp  Win_Utility.cpp  Win_Window.cpp  Win_WindowSettings.hpp
CMEngine/src/Windows/: CME_WNKeyboard.cpp  CME_WNUtility.cpp  CME_WNWindow.cpp
CMSandbox/: CMakeLists.txt
CMSandbox/src/: Main.cpp
Common/: Assert.hpp  CMakeLists.txt  Cast.hpp  Config.hpp  Dummy.cpp  IBasicLogger.hpp  Math.hpp  RuntimeFailure.hpp  View.hpp
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  Editor.hpp  Main.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.hpp
Engine/resources/shaders/: BasicPS.hlsl  BasicVS.hlsl
Engine/src/: Engine.cpp  Ref.hpp
Engine/src/Asset/: Asset.hpp  AssetID.cpp  AssetID.hpp  AssetManager.cpp  AssetManager.hpp
LibEngineCore/: CMakeLists.txt
LibEngineCore/include/: EngineCore.hpp
LibEngineCore/src/: BatchRenderer.cpp  BatchRenderer.hpp  Buffer.cpp  Buffer.hpp  Component.cpp  Component.hpp  EngineCore.cpp  Graphics.hpp  Log.hpp  Macros.hpp  Math.cpp  Math.hpp  PCH.hpp  PCH_Main.hpp  Pass.hpp  Platform.hpp  PlatformUtil.hpp  Renderer.cpp  Renderer.hpp  Types.cpp  Types.hpp  Utility.hpp
LibEngineCore/src/Asset/: Asset.hpp  AssetID.cpp  AssetID.hpp  AssetManager.cpp  AssetManager.hpp
LibEngineCore/src/ECS/: Archetype.hpp  ECS.cpp  ECS.hpp  Entity.cpp  Entity.hpp  SparseSet.hpp  TypeID.hpp
Platform/: CMakeLists.txt
Platform/include/: IRefCounted.hpp  Platform.hpp
Platform/src/: Export.hpp  IApi.hpp  IApiFactory.hpp  IApiResources.cpp  IApiResources.hpp  IContext.hpp  ILogger.hpp  IPlatform.cpp  IPlatform.hpp  IWindow.hpp  ImplRefCounted.hpp  ImplRefCountedUndef.hpp  PCH.hpp  PlatformFailure.hpp  Types.cpp  Types.hpp
modules/CMImGui/: CM_README.md  CMakeLists.txt
modules/CMPlatform/: CMakeLists.txt
modules/CMShaders/: CMakeLists.txt  Common.hlsl  GLTF_PS.hlsl  GLTF_VS.hlsl  Gltf_Basic_PS.hlsl  Gltf_Basic_VS.hlsl  Gltf_Texture_PS.hlsl  Quad_PS.hlsl  Quad_VS.hlsl
modules/WinImpl/: CMakeLists.txt
(+276 files in other folders)
